.archive/k3s-cluster-apps/apps/networking/traefik/dashboard/traefikCRD.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.${SECRET_CLUSTER_DOMAIN}`)
      middlewares:
        - name: authelia-forward
          namespace: security
      services:
        - kind: TraefikService
          name: api@internal
